# GABMATH

./: .gitignore  CMakeLists.txt  README.md  build.sh
Music_Visualizer/: build.gradle.kts  settings.gradle.kts
Music_Visualizer/gradle/wrapper/: gradle-wrapper.properties
Music_Visualizer/src/main/java/org/example/: Camera.java  Cube.java  Displaymanager.java  GabKeys.java  Input.java  LoadShader.java  Main.java  Window.java  testWindow.java
Music_Visualizer/src/main/resources/: cubeV.glsl
NA FIZYKE !!!!!!!/: .clangd  CMakeLists.txt  build.sh
NA FIZYKE !!!!!!!/assets/: untitled.glb
NA FIZYKE !!!!!!!/src/: ColoringRandomPolygon.hpp  main.cpp
NA FIZYKE !!!!!!!/src2/: CentralForceFields.hpp  main.cpp
PingyPongy/: build.gradle
PingyPongy/src/main/java/: Main.java
PingyPongy/src/main/java/Game/: Game.java
PxIn2DGames/resources/: magnus.fs
PxIn2DGames/src/main/java/: Main.java
PxIn2DGames/src/main/java/Application/: App.java  AppUtils.java  Game1.java  Game2.java  Game3.java  PingPong.java
project/: CMakeLists.txt
src/: Audio.cpp  Audio.h  CentralForceFields.hpp  CollisionPrecision.hpp  ColoringRandomPolygon.hpp  gab_math.c  gab_math.h  main.c  main.cpp
